--- a/about.html
+++ b/about.html
@@ -30,10 +30,12 @@
         </div>
         <div class="menu-bar">
           <ul>
-            <li><a href="#">About us</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About us</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="items.html">Items</a></li>
             <li><a href="#">Login</a></li>
-            <li><a href="#">Sign up</a></li>
-            <li><a href="#"><i class="fa-regular fa-cart-shopping"></i>Cart</a></li>
+  
       
           </ul>
         </div>
