--- a/about.html
+++ b/about.html
@@ -32,9 +32,9 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About us</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="items.html">Items</a></li>
-            <li><a href="#">Login</a></li>
+            <li><a href="sprint2/task5/items.html">Items List</a></li>
+            <li><a href="sprint2/task-6/item-form.html">Item Form</a></li>
+            <li><a href="login.html">Login</a></li>
   
       
           </ul>
