--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
             <img src="All Images/shoe1.png">
           </div>
         </div>
+
+        <div class="row">
+          <div class="col-md-4">
+            <img src="All Images/shirt2.png">
+          </div>
+          <div class="col-md-4">
+            <img src="All Images/shoe2.png">
+          </div>
+          <div class="col-md-4">
+            <img src="All Images/shoe3.png">
+          </div>
+        </div>
       </div>
      </section>
 
@@ -126,19 +138,19 @@
   <div class="container">
     <div class="row">
       <div class="col-md-3 feature-box">
-        <img src="imag/feature-box1.png">
+        <!-- <img src="imag/feature-box1.png"> -->
         <div class="feature-text">
           <p><b>100% original items </b> are avialable</b></p>
         </div>
       </div>
       <div class="col-md-3 feature-box">
-        <img src="imag/feature-box2.png">
+        <!-- <img src="imag/feature-box2.png"> -->
         <div class="feature-text">
           <p><b>return within 10 days</b> of receiving your order</p>
         </div>
       </div>
       <div class="col-md-3 feature-box">
-        <img src="imag/feature-box3.png">
+        <!-- <img src="imag/feature-box3.png"> -->
         <div class="feature-text">
           <p><b>Pay online through multiple</b>(UPI/cash on delivery)</p>
         </div>
@@ -197,11 +209,16 @@
 
 
    </script>
+
+
+
+
+
    <!-- <script src="js/itemsController.js"></script>
    <script src="js/item-form.js"></script>
-   <script src="js/items.js"></script>
-    -->
-   <script src="script.js"></script>
+   <script src="js/items.js"></script> -->
+    
+   <!-- <script src="script.js"></script> -->
 
 
 
